<resources xmlns:xlmns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings_header">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate_header">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="orderSummary">Order Summary</string>
    <string name="order">Order</string>
    <string name="thankyou">Thank you</string>
    <!--
        Subject line for the order summary email. It will be in the format of
        "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
